--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/apache-tomcat-7.0.75/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MailmanLambo/Desktop/servlet-3_0-final-jar_and_schema/javax.servlet.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
