--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/MailmanLambo/Desktop/servlet-3_0-final-jar_and_schema/javax.servlet.jar"/>
+	<classpathentry kind="lib" path="servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
